--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forward Volatility Calculator</title>
+  <title>Stock Screener</title>
   <style>
     body {
       background: #f3f4f6;
@@ -14,98 +14,97 @@
       height: 100vh;
       margin: 0;
     }
-    .calculator {
+    .container {
       background: white;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      padding: 20px;
-      width: 320px;
+      padding: 30px;
+      width: 360px;
+    }
+    h1 {
+      text-align: center;
+      font-size: 1.5rem;
+      color: #111827;
     }
     input {
       width: 100%;
-      font-size: 1.5rem;
-      text-align: right;
-      margin-bottom: 10px;
+      font-size: 1.2rem;
+      margin-top: 10px;
       padding: 10px;
       border: 2px solid #ddd;
       border-radius: 8px;
     }
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-    }
     button {
-      font-size: 1.2rem;
-      padding: 15px;
+      width: 100%;
+      background-color: #3b82f6;
+      color: white;
+      font-size: 1.1rem;
       border: none;
       border-radius: 8px;
-      background-color: #e5e7eb;
+      padding: 10px;
+      margin-top: 12px;
       cursor: pointer;
       transition: background-color 0.2s;
     }
     button:hover {
-      background-color: #d1d5db;
+      background-color: #2563eb;
     }
-    .operator {
-      background-color: #60a5fa;
-      color: white;
+    .results {
+      margin-top: 20px;
+      font-size: 1rem;
+      line-height: 1.6;
     }
-    .operator:hover {
-      background-color: #3b82f6;
+    .error {
+      color: red;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="calculator">
-    <input type="text" id="display" readonly />
-    <div class="buttons">
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="backspace()">⌫</button>
-      <button onclick="append('%')">%</button>
-      <button class="operator" onclick="append('/')">÷</button>
-
-      <button onclick="append('7')">7</button>
-      <button onclick="append('8')">8</button>
-      <button onclick="append('9')">9</button>
-      <button class="operator" onclick="append('*')">×</button>
-
-      <button onclick="append('4')">4</button>
-      <button onclick="append('5')">5</button>
-      <button onclick="append('6')">6</button>
-      <button class="operator" onclick="append('-')">−</button>
-
-      <button onclick="append('1')">1</button>
-      <button onclick="append('2')">2</button>
-      <button onclick="append('3')">3</button>
-      <button class="operator" onclick="append('+')">+</button>
-
-      <button onclick="append('0')">0</button>
-      <button onclick="append('.')">.</button>
-      <button class="operator" style="grid-column: span 2;" onclick="calculate()">=</button>
-    </div>
+  <div class="container">
+    <h1>Stock Screener</h1>
+    <input id="ticker" type="text" placeholder="Enter ticker symbol (e.g. AAPL)" />
+    <button onclick="getData()">Get Data</button>
+    <div class="results" id="results"></div>
   </div>
 
   <script>
-    const display = document.getElementById('display');
+    async function getData() {
+      const ticker = document.getElementById('ticker').value.trim().toUpperCase();
+      const resultsDiv = document.getElementById('results');
+      resultsDiv.innerHTML = "Loading...";
 
-    function append(value) {
-      display.value += value;
-    }
+      if (!ticker) {
+        resultsDiv.innerHTML = '<p class="error">Please enter a ticker symbol.</p>';
+        return;
+      }
 
-    function clearDisplay() {
-      display.value = '';
-    }
-
-    function backspace() {
-      display.value = display.value.slice(0, -1);
-    }
-
-    function calculate() {
       try {
-        display.value = eval(display.value.replace('%', '/100'));
-      } catch {
-        display.value = 'Error';
+        const url = `https://query1.finance.yahoo.com/v7/finance/quote?symbols=${ticker}`;
+        const response = await fetch(url);
+        const data = await response.json();
+
+        const result = data.quoteResponse.result[0];
+        if (!result) {
+          resultsDiv.innerHTML = '<p class="error">Ticker not found.</p>';
+          return;
+        }
+
+        const price = result.regularMarketPrice?.toFixed(2);
+        const change = result.regularMarketChangePercent?.toFixed(2);
+        const pe = result.trailingPE ? result.trailingPE.toFixed(2) : "N/A";
+        const cap = result.marketCap ? (result.marketCap / 1e9).toFixed(2) + "B" : "N/A";
+
+        resultsDiv.innerHTML = `
+          <p><strong>Symbol:</strong> ${result.symbol}</p>
+          <p><strong>Price:</strong> $${price}</p>
+          <p><strong>Change:</strong> ${change}%</p>
+          <p><strong>P/E Ratio:</strong> ${pe}</p>
+          <p><strong>Market Cap:</strong> ${cap}</p>
+        `;
+      } catch (error) {
+        resultsDiv.innerHTML = '<p class="error">Error fetching data. Try again later.</p>';
+        console.error(error);
       }
     }
   </script>
