--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       }
 
       try {
-        const url = `https://query1.finance.yahoo.com/v7/finance/quote?symbols=${ticker}`;
+        const url = `https://cors.isomorphic-git.org/https://query1.finance.yahoo.com/v7/finance/quote?symbols=${ticker}`;
         const response = await fetch(url);
         const data = await response.json();
 
