--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       }
 
       try {
-        const url = `https://financialmodelingprep.com/api/v3/quote/${ticker}?apikey=demo`;
+        const url = `https://financialmodelingprep.com/api/v3/quote/${ticker}?apikey=wmQHijCTjVI5vCdfmNHkrkaDypbeI3eO`;
         const response = await fetch(url);
         const data = await response.json();
 
